# store-ab-testing-trend-adjusted

./: .gitignore  README.md  pyproject.toml
data/: matched_pairs.csv  method_comparison.csv  store_metadata.csv  store_preperiod_features.csv  store_segments.csv  store_weekly_sales.csv  treatment_control_matches.json
notebooks/: 01_data_generation.ipynb  02_pretrend_features.ipynb  03_optionA_segmentation.ipynb  04_optionB_matching_did.ipynb  05_results_comparison.ipynb
reports/: did_regression_summary.txt
